--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
   "extends": "airbnb",
   "globals": {
-    "document": false
+    "document": false,
+    "fetch": false
   },
   "rules": {
     "react/no-unused-prop-types": [2, { skipShapeProps: true }]
