--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "gulp-webpack": "^1.5.0"
   },
   "dependencies": {
-    "jquery": "^3.1.1",
+    "immutable": "^3.8.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "whatwg-fetch": "^1.0.0"
   }
 }
