Create unit tests for isWithinRange method

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,9 +2,12 @@
   "extends": "airbnb",
   "globals": {
     "document": false,
-    "fetch": false
+    "fetch": false,
+    "describe": false,
+    "it": false
   },
   "rules": {
+    "import/no-extraneous-dependencies": 0,
     "react/no-unused-prop-types": [2, { skipShapeProps: true }]
   }
 }
