--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "find ./src/js -name '*.spec.js*' | xargs mocha tests/setup.js -R spec",
+    "start": "gulp"
   },
   "keywords": [
     "react",
@@ -18,7 +19,9 @@
     "babel-eslint": "^7.0.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "babel-register": "^6.18.0",
     "browser-sync": "^2.17.5",
+    "chai": "^3.5.0",
     "del": "^2.2.2",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^2.0.1",
@@ -31,7 +34,9 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
-    "gulp-webpack": "^1.5.0"
+    "gulp-webpack": "^1.5.0",
+    "jsdom": "^9.9.1",
+    "mocha": "^3.2.0"
   },
   "dependencies": {
     "immutable": "^3.8.1",
